finsihed styling, responsive, added some images

--- a/src/index.html
+++ b/src/index.html
@@ -32,21 +32,58 @@
                                 <h4>Driven By Code</h4>
                                 <h1>Who I Am</h1>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, temporibus dignissimos. Explicabo minus ad similique. Corporis delectus, blanditiis hic maxime est fugit, modi ad sapiente, esse inventore dicta soluta impedit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus sint repellat nesciunt eius libero reprehenderit tempora officia quos vitae sequi, sit ratione harum dolorem recusandae neque, quas velit. At, excepturi.</p>
+                            <p>I’m a Toronto-based Full Stack Developer. I graduated from Durham College for Computer Programming and later continued my education at HackerYou for Front-end Web Development. I enjoy collaborating with other people that share my enthusiasm and passion for web development. I also love to create web apps that allow people to interact directly with the content, as well as apps that allow people manage and publish their own content.</p>
                         </div>
                     </div>
+                    <div class="secret"></div>
+                    <div class="me"></div>
                 </div>
                 <div class="skills">
+                    <div class="keyboard"></div>
                     <div class="content">
                          <div class="contentInner">
                             <div class="h1Wrapper">
                                 <h4>Driven By Code</h4>
                                 <h1>1337 SKILZ</h1>
                             </div>
-                            <p>expert</p>
+     <!--                        <p>expert</p>
                             <p>proficient</p>
-                            <p>learning</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, temporibus dignissimos. Explicabo minus ad similique. Corporis delectus, blanditiis hic maxime est fugit, modi ad sapiente, esse inventore dicta soluta impedit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus sint repellat nesciunt eius libero reprehenderit tempora officia quos vitae sequi, sit ratione harum dolorem recusandae neque, quas velit. At, excepturi.</p>
+                            <p>learning</p> -->
+                            
+                            <div id="tabs">
+                                <ul>
+                                    <li><a href="#expert">Expert</a></li>
+                                    <li><a href="#proficient">Proficient</a></li>
+                                    <li><a href="#learning">Learning</a></li>
+                                </ul>
+                                <div class="tabPanelWrapper">
+                                    <div class="tabPanelInnerWrapper">
+                                        <div class="tabPanel">
+                                            <p id="expert">HTML/CSS</p>
+                                            <p>JavaScript</p>
+                                            <p>Python</p>
+                                            <p>jQuery</p>
+                                            <p>SQL</p>
+                                            <p>MongoDB</p>
+                                        </div>
+                                        <div class="tabPanel">
+                                            <p id="proficient">React</p>
+                                            <p>Firebase</p>
+                                            <p>PHP</p>
+                                            <p>Django/Flask</p>
+                                            <p>jQuery</p>
+                                            <p>C#</p>
+                                        </div>
+                                        <div class="tabPanel">
+                                            <p id="learning">Oracle</p>
+                                            <p>Ruby</p>
+                                            <p>something</p>
+                                            <p>else</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -97,13 +134,6 @@
                             <h4>Stuff I Made</h4>
                             <h1>My Portfolio</h1>
                         </div>
-<!--                         <ul class="nav">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Service</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul> -->
                     </div>
 
                     <div class="portfolioMiddle">
@@ -141,7 +171,7 @@
                             <div class="portfolioItemInfo">
                                 <div class="h3Wrapper">
                                     <h3>Space Race</h3>
-                                    <h4>JavaScript, Paired Programming [Michelle Co.], Responsive</h4>
+                                    <h4>JavaScript, Responsive</h4>
                                 </div>
                             </div>
                             <a href="https://spacerace.brianbaker.ca/"></a>
@@ -157,7 +187,7 @@
                             <a href="https://mercy.brianbaker.ca/"></a>
                         </div>
 
-                        <div class="portfolioItem chilli">
+                        <!-- <div class="portfolioItem chilli">
                             <div class="portfolioItemInfo">
                                 <div class="h3Wrapper">
                                     <h3>Chilli Restauraunt</h3>
@@ -165,22 +195,11 @@
                                 </div>
                             </div>
                             <a href="https://chilli.brianbaker.ca/"></a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
 
-<!--             <section class="clients">
-                clients
-            </section>
-
-            <section class="email">
-                email
-            </section> -->
-
-            <!-- <section class="contact">
-                
-            </section> -->
         </main>
         <footer id="contact">
             <!-- <img class="badge" src="assets/images/snob-approved.png" alt=""> -->
@@ -194,6 +213,7 @@
                 </ul>
             </div>
         </footer>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script type="text/javascript" src="assets/js/main.js"></script>
     </body>
 </html>
-<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
