changed some headings

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                     <div class="content">
                         <div class="contentInner">
                             <div class="h1Wrapper">
-                                <h4>Driven By Code</h4>
+                                <h4>TITLE HERE</h4>
                                 <h1>Who I Am</h1>
                             </div>
                             <p>I’m a Toronto-based Full Stack Developer. I graduated from Durham College for Computer Programming and later continued my education at HackerYou for Front-end Web Development. I enjoy collaborating with other people that share my enthusiasm and passion for web development. I also love to create web apps that allow people to interact directly with the content, as well as apps that allow people manage and publish their own content.</p>
@@ -43,12 +43,9 @@
                     <div class="content">
                          <div class="contentInner">
                             <div class="h1Wrapper">
-                                <h4>Driven By Code</h4>
-                                <h1>1337 SKILZ</h1>
+                                <h4>TITLE HERE</h4>
+                                <h1>My Skills</h1>
                             </div>
-     <!--                        <p>expert</p>
-                            <p>proficient</p>
-                            <p>learning</p> -->
                             
                             <div id="tabs">
                                 <ul>
