Tweaked respinsive design, added more content

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                     <div class="content">
                         <div class="contentInner">
                             <div class="h1Wrapper">
-                                <h4>TITLE HERE</h4>
+                                <h4>A little about me</h4>
                                 <h1>Who I Am</h1>
                             </div>
                             <p>I’m a Toronto-based Full Stack Developer. I graduated from Durham College for Computer Programming and later continued my education at HackerYou for Front-end Web Development. I enjoy collaborating with other people that share my enthusiasm and passion for web development. I also love to create web apps that allow people to interact directly with the content, as well as apps that allow people manage and publish their own content.</p>
@@ -43,7 +43,7 @@
                     <div class="content">
                          <div class="contentInner">
                             <div class="h1Wrapper">
-                                <h4>TITLE HERE</h4>
+                                <h4>What I can do</h4>
                                 <h1>My Skills</h1>
                             </div>
                             
@@ -56,26 +56,37 @@
                                 <div class="tabPanelWrapper">
                                     <div class="tabPanelInnerWrapper">
                                         <div class="tabPanel">
-                                            <p id="expert">HTML/CSS</p>
-                                            <p>JavaScript</p>
-                                            <p>Python</p>
-                                            <p>jQuery</p>
-                                            <p>SQL</p>
-                                            <p>MongoDB</p>
+                                            <div class="tabContent">
+                                                <h3 id="expert">Some things I'm good with:</h3>
+                                                <p>HTML5 &amp; CSS3</p>
+                                                <p>SCSS</p>
+                                                <p>JavaScript &amp; jQuery</p>
+                                                <p>Python</p>
+                                                <p>MongoDB &amp; SQL</p>
+                                                <p>NGINX</p>
+                                            </div>
                                         </div>
+
                                         <div class="tabPanel">
-                                            <p id="proficient">React</p>
-                                            <p>Firebase</p>
-                                            <p>PHP</p>
-                                            <p>Django/Flask</p>
-                                            <p>jQuery</p>
-                                            <p>C#</p>
+                                            <div class="tabContent">
+                                                <h3 id="proficient">Some things I'm familiar with:</h3>
+                                                <p>React</p>
+                                                <p>Firebase</p>
+                                                <p>PHP</p>
+                                                <p>Flask</p>
+                                                <p>Apache</p>
+                                                <p>C#</p>
+                                            </div>
                                         </div>
+
                                         <div class="tabPanel">
-                                            <p id="learning">Oracle</p>
-                                            <p>Ruby</p>
-                                            <p>something</p>
-                                            <p>else</p>
+                                            <div class="tabContent">
+                                                <h3 id="learning">Some things that I'm learing:</h3>
+                                                <p id="learning">Ruby</p>
+                                                <p>Oracle</p>
+                                                <p>Django</p>
+                                                <p>C++</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
