Fixed email buttons

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                 <h1>Brian Baker</h1>
                 <div class="headerButtonWrapper">
                     <button class="buttonHollow" id="readMoreButton">Read More</button>
-                    <button class="buttonSolid emailMeButton">Email Me</button>
+                    <a class="buttonSolid emailMeButton" href="mailto:mail@brianbaker.ca">Email Me</a>
                 </div>
             </div>
         </header>
@@ -211,15 +211,15 @@
         </main>
         <footer id="contact">
             <!-- <img class="badge" src="assets/images/snob-approved.png" alt=""> -->
-            <button class="emailMeButton">Email Me</button>
+            <a class="emailMeButton" href="mailto:mail@brianbaker.ca">Email Me</a>
             <div class="socialMediaWrapper">
                 <ul class="socialMedia">
-                    <!-- <li><a href="mailto:mail@brianbaker.ca"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li> -->
                     <li><a href="https://twitter.com/brian_codes"><i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
                     <li><a href="https://www.linkedin.com/in/brian-baker-8a0783123/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                     <li><a href="https://github.com/Briaker"><i class="fa fa-github" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
+            <a href="mailto:mail@brianbaker.ca">mail@brianbaker.ca</i></a>
         </footer>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script type="text/javascript" src="assets/js/main.js"></script>
