--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             <div class="wrapper column headerWrapper">
                 <h3>Fullstack Developer</h3>
                 <h1>Brian Baker</h1>
-                <div class="headerButtonWrapper">
+                <div class="headerButtonsWrapper">
                     <button class="buttonHollow" id="readMoreButton">Read More</button>
                     <a class="buttonSolid emailMeButton" href="mailto:mail@brianbaker.ca">Email Me</a>
                 </div>
@@ -151,48 +151,64 @@
                                     <h3>Colour Schemer</h3>
                                     <h4>React, Firebase, Responsive</h4>
                                 </div>
+                                <div class="portfolioButtons">
+                                    <a class="linkButton" href="https://colourSchemer.brianbaker.ca/">View</a>
+                                    <a class="linkButton" href="https://github.com/Briaker/colour-schemer"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                </div>
                             </div>
-                            <a href="https://colourSchemer.brianbaker.ca/"></a>
+
                         </div>
 
                         <div class="portfolioItem birdFinder">
                             <div class="portfolioItemInfo">
-                                <div class="h3Wrapper">
+                                <div class="infoWrapper">
                                     <h3>Bird Finder</h3>
                                     <h4>JavaScript, PetFinder API, Responsive</h4>
                                 </div>
+                                <div class="portfolioButtons">
+                                    <a class="linkButton" href="https://birdfinder.brianbaker.ca/">View</a>
+                                    <a class="linkButton" href="https://github.com/Briaker/petfinder"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                </div>
                             </div>
-                            <a href="https://birdfinder.brianbaker.ca/"></a>
                         </div>
 
                         <div class="portfolioItem catchARide">
                             <div class="portfolioItemInfo">
-                                <div class="h3Wrapper">
+                                <div class="infoWrapper">
                                     <h3>Catch A Ride</h3>
                                     <h4>JavaScript, Multiple APIs, Responsive</h4>
                                 </div>
+                                <div class="portfolioButtons">
+                                    <a class="linkButton" href="https://catcharide.brianbaker.ca">View</a>
+                                    <a class="linkButton" href="https://github.com/Briaker/catch-a-ride"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                </div>
                             </div>
-                            <a href="https://catcharide.brianbaker.ca/"></a>
                         </div>
 
                         <div class="portfolioItem spaceRace">
                             <div class="portfolioItemInfo">
-                                <div class="h3Wrapper">
+                                <div class="infoWrapper">
                                     <h3>Space Race</h3>
                                     <h4>JavaScript, Responsive</h4>
                                 </div>
+                                <div class="portfolioButtons">
+                                    <a class="linkButton" href="https://spacerace.brianbaker.ca">View</a>
+                                    <a class="linkButton" href="https://github.com/Briaker/space-race"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                </div>
                             </div>
-                            <a href="https://spacerace.brianbaker.ca/"></a>
                         </div>
 
                         <div class="portfolioItem mercy">
                             <div class="portfolioItemInfo">
-                                <div class="h3Wrapper">
+                                <div class="infoWrapper">
                                     <h3>Mercy Heart Charity</h3>
                                     <h4>HTML/CSS, jQuery, Responsive</h4>
                                 </div>
+                                <div class="portfolioButtons">
+                                    <a class="linkButton" href="https://mercy.brianbaker.ca">View</a>
+                                    <a class="linkButton" href="https://github.com/Briaker/mercy-heart"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                </div>
                             </div>
-                            <a href="https://mercy.brianbaker.ca/"></a>
                         </div>
 
                         <!-- <div class="portfolioItem chilli">
@@ -210,8 +226,6 @@
 
         </main>
         <footer id="contact">
-            <!-- <img class="badge" src="assets/images/snob-approved.png" alt=""> -->
-            <a class="emailMeButton" href="mailto:mail@brianbaker.ca">Email Me</a>
             <div class="socialMediaWrapper">
                 <ul class="socialMedia">
                     <li><a href="https://twitter.com/brian_codes"><i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
